# euler

./: .gitignore  .travis.yml  Euler.cabal  README.md  euler.cabal
src/: Common.hs  EulerMain.hs  Figurate.hs  Main.hs  Problem1.hs  Problem10.hs  Problem102.hs  Problem104.hs  Problem11.hs  Problem112.hs  Problem12.hs  Problem124.hs  Problem13.hs  Problem14.hs  Problem145.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem179.hs  Problem18.hs  Problem187.hs  Problem19.hs  Problem2.hs  Problem20.hs  Problem200.hs  Problem203.hs  Problem204.hs  Problem206.hs  Problem21.hs  Problem22.hs  Problem23.hs  Problem24.hs  Problem25.hs  Problem26.hs  Problem27.hs  Problem28.hs  Problem29.hs  Problem3.hs  Problem30.hs  Problem303.hs  (+62 more)
src-main/: Main.hs
tests/: Main.hs
