name:           euler
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable euler
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   primes,
                   split,
                   bytestring,
                   directory,
                   base,
                   array,
                   mtl,
                   containers,
                   regex-base,
                   regex-posix,
                   regex-compat,
                   vector,
                   criterion,
                   timeit,
                   optparse-applicative
  ghc-options:     -Wall -O2 -fno-warn-type-defaults -rtsopts
  other-modules:
                   Problem16,
                   Problem33,
                   Problem41,
                   Problem1,
                   Problem2,
                   Problem3,
                   Problem4,
                   Problem5,
                   Problem6,
                   Problem7,
                   Problem8,
                   Problem9,
                   Problem10,
                   Problem11,
                   Problem12,
                   Problem13,
                   Problem14,
                   Problem15,
                   Problem17,
                   Problem19,
                   Problem20,
                   Problem22,
                   Problem25,
                   Problem27,
                   Problem28,
                   Problem29,
                   Problem30,
                   Problem34,
                   Problem35,
                   Problem36,
                   Problem39,
                   Problem40,
                   Problem42,
                   Problem45,
                   Problem48,
                   Problem49,
                   Problem52,
                   Problem56,
                   Problem62,
                   Problem97,
                   Problem124,
                   Problem187,
                   Problem303,
                   Problem92,
                   Problem63,
                   Problem71,
                   Problem72,
                   Problem73,
                   Problem76,
                   Problem38,
                   Problem53,
                   Problem55,
                   Problem23,
                   Problem112,
                   Problem31,
                   Problem204,
                   Problem43,
                   Problem99,
                   Problem47,
                   Problem87,
                   Common,
                   Problem145,
                   Problem32,
                   Problem46,
                   Problem50,
                   Problem51,
                   Problem59,
                   Problem69,
                   Problem203,
                   Problem381,
                   Problem65,
                   Problem54,
                   Figurate,
                   Problem57,
                   Problem70,
                   Problem74,
                   Problem104,
                   Problem102,
                   Problem58,
                   Problem206,
                   Problem89,
                   Problem80,
                   Problem200

