name:           euler
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple

library
  hs-source-dirs:  src
  build-depends:
                   base == 4.*,
                   array == 0.5.*,
                   bytestring == 0.10.*,
                   containers == 0.5.*,
                   directory == 1.2.*,
                   mtl == 2.2.*,
                   optparse-applicative == 0.11.*,
                   primes == 0.2.*,
                   split == 0.2.*,
                   text == 1.2.*,
                   vector == 0.10.*
  ghc-options:     -Wall -O2 -threaded -fno-warn-type-defaults -rtsopts -fprof-auto
  exposed-modules: EulerMain,
                   Solutions,
                   Problem16,
                   Problem33,
                   Problem41,
                   Problem1,
                   Problem2,
                   Problem3,
                   Problem4,
                   Problem5,
                   Problem6,
                   Problem7,
                   Problem8,
                   Problem9,
                   Problem10,
                   Problem11,
                   Problem12,
                   Problem13,
                   Problem14,
                   Problem15,
                   Problem17,
                   Problem19,
                   Problem20,
                   Problem22,
                   Problem25,
                   Problem27,
                   Problem28,
                   Problem29,
                   Problem30,
                   Problem34,
                   Problem35,
                   Problem36,
                   Problem39,
                   Problem40,
                   Problem42,
                   Problem45,
                   Problem48,
                   Problem49,
                   Problem52,
                   Problem56,
                   Problem62,
                   Problem97,
                   Problem124,
                   Problem187,
                   Problem303,
                   Problem92,
                   Problem63,
                   Problem71,
                   Problem72,
                   Problem73,
                   Problem76,
                   Problem38,
                   Problem53,
                   Problem55,
                   Problem23,
                   Problem112,
                   Problem31,
                   Problem204,
                   Problem43,
                   Problem99,
                   Problem47,
                   Problem87,
                   Common,
                   Problem145,
                   Problem32,
                   Problem46,
                   Problem50,
                   Problem51,
                   Problem59,
                   Problem69,
                   Problem203,
                   Problem381,
                   Problem65,
                   Problem54,
                   Figurate,
                   Problem57,
                   Problem70,
                   Problem74,
                   Problem104,
                   Problem102,
                   Problem58,
                   Problem206,
                   Problem89,
                   Problem80,
                   Problem200,
                   Problem64,
                   Problem357,
                   Problem179,
                   Problem78,
                   Problem77,
                   Problem75,
                   Problem67,
                   Problem61,
                   Problem44,
                   Problem37,
                   Problem26,
                   Problem24,
                   Problem21,
                   Problem60,
                   Problem18

executable euler
  hs-source-dirs:  src-main
  main-is: Main.hs
  ghc-options:     -Wall -O2 -threaded -fno-warn-type-defaults -rtsopts -fprof-auto
  build-depends:
                   base == 4.*,
                   euler

Test-Suite test-euler
  hs-source-dirs:  tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
                   base == 4.*,
                   HUnit == 1.2.*,
                   euler
